--- a/src/main/twirl/views/welcome.scala.html
+++ b/src/main/twirl/views/welcome.scala.html
@@ -3,14 +3,25 @@
 
         <a href="/bysykkelstativ/status/">Oversikt over ledige sykler og låser i sanntid</a>
         <h2>REST api for ledige sykler og låser på Oslos bysykkelstativ</h2>
-        <a href="/api/status/all">Alle stasjoner</a>
+        <div class="container-fluid">
+            <a href="/api/status/all">Alle stasjoner</a>
+        </div>
         <div class="container-fluid">
             Finn en stasjon git id:
             <a href="/api/status/station_id/623">Eksempel stasjon med id 623</a>
         </div>
         <div class="container-fluid">
             Finn en stasjon gitt navn
-        <a href="/api/status/name/pilestredet">Eksempel Pilestredet</a>
+            <a href="/api/status/name/pilestredet">Eksempel Pilestredet</a>
         </div>
+        <div class="container-fluid">
+            Liste over alle stasjoner som har ledige sykler for øyeblikket
+            <a href="/api/status/bikes_available">Ledige sykler</a>
+        </div>
+        <div class="container-fluid">
+            Liste over alle stasjoner som har ledige låser for øyeblikket
+            <a href="/api/status/docks_available">Ledige låser</a>
+        </div>
+
     </div>
 }
