--- a/src/main/twirl/layouts/default.scala.html
+++ b/src/main/twirl/layouts/default.scala.html
@@ -1,12 +1,14 @@
 @(title: String, headline: String)(body: Html)
 <html>
-  <head>
-      <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <title>@title</title>
-  </head>
-  <body>
-    <h1>@headline</h1>
-    @body
-  </body>
+    <head>
+            <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <title>@title</title>
+    </head>
+    <body>
+        <div class="container-fluid">
+            <h1>@headline</h1>
+            @body
+        </div>
+    </body>
 </html>
